@@ -104,6 +104,7 @@ enum LIBLUKSDE_HASHING_METHODS
 	LIBLUKSDE_HASHING_METHOD_UNKNOWN,
 	LIBLUKSDE_HASHING_METHOD_RIPEMD160,
 	LIBLUKSDE_HASHING_METHOD_SHA1,
+	LIBLUKSDE_HASHING_METHOD_SHA224,
 	LIBLUKSDE_HASHING_METHOD_SHA256,
 	LIBLUKSDE_HASHING_METHOD_SHA512
 };
